Refactor switch expressions for clarity